--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,8 @@ ol li {
 }
 
 #banner {
+	height: 35%;
+	width: 35%;
 	color: #fff;
 	text-align: center;
 	-moz-box-shadow: rgba(0, 0, 0, 0.5)  0px 3px 5px;
