--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ a:hover {
   text-decoration: underline;
 }
 
+dfn {font-weight: bold;}
+i {font-style: italic;}
+
 blockquote { 
   margin: 2em 0; 
   padding: 1em 2em 0 2em;
@@ -91,7 +94,7 @@ ol li {
 .left { 
   float: left;
   width: auto;
-  margin-right: 1em;
+  margin-right: 5em;
 }
 
 .right { 
